[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"



[project]
name = "tse_option"
version = "0.1.4.0"
authors = [
  { name="Seyed Mohammad Sokout", email="sm.sokut@gmail.com" },
]
description = "Option pricing in Tehran Stock Exchange (TSE) and Iran Farabourse (IFB)"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

keywords = ["Tehran Stock Exchange","TSE","Iran Farabourse","IFB","Option pricing", "BSM"]
dependencies = [
    "numpy",
    "pandas",
    "scipy",
    "requests",
    "jalali_pandas"
]


[project.optional-dependencies]
dev = ["numpy", "pandas", "scipy", "requests", "jalali_pandas"]

[project.urls]
"Homepage" = "https://github.com/sm-sokout/tse-option"